# netpanel

./: CMakeLists.txt  LICENSE  README.md
configs/plug/: TmpBel.lng  TmpEng.lng  TmpRus.lng
src/: NetCfg.cpp  NetCfg.hpp  NetClass.cpp  NetClass.hpp  NetLng.hpp  NetMix.cpp  NetPanel.cpp  NetPanel.hpp  SFTPClient.h
